@@ -1,5 +1,9 @@
 2008-11-05  Michal Ludvig  <michal@logix.cz>
 
+	* S3/S3.py, S3/Exception.py: Re-issue failed requests in S3.send_request()
+
+2008-11-05  Michal Ludvig  <michal@logix.cz>
+
 	* s3cmd: Don't leak open filehandles in sync. Thx Patrick Linskey for report.
 	* s3cmd: Re-raise the right exception.
 	* s3cmd, S3/S3.py, S3/Exceptions.py: Don't abort 'sync' or 'put' on files
